app8ThreatsAndIncidents/microservice2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app8-microservice2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app8-microservice2
  template:
    metadata:
      labels:
        app: app8-microservice2
    spec:
      containers:
      - name: app8-microservice2
        image: b0rkemborina/zta-cybersec-suite:app8microservice2
        ports:
        - containerPort: 8071
