app8ThreatsAndIncidents/microservice2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app8-microservice2
spec:
  selector:
    app: app8-microservice2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8071
  type: ClusterIP
